--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -198,6 +198,13 @@
   howpublished = {<\url{https://root.cern.ch/}> [žiūr. 2018-05-10]}
 }
 
+@misc{AN2013,
+  author  = {Matthew Jones, David Silvers},
+  title   = {{Angular Distributions of Muons from Drell-Yan production}},
+  year    = {2013},
+  howpublished = {CMS AN-13-180, CERN CMS vidinis dokumentas}
+}
+
 @misc{DYoriginal,
   author  = {{Sidney David Drell, Tung-Mow Yan}},
   title   = {{Massive Lepton Pair Production in Hadron-Hadron Collisions at High-Energies}},
