Semester work update

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -1,12 +1,12 @@
 @misc{Poisson,
   author = {Sylvain Veilleux},
   title  = {{Observational astronomy: 1. Some Statistical Basics}},
-  howpublished    = {University of Maryland, Department of Astronomy. Fall 2006, ASTR310. <\url{http://www.astro.umd.edu/~veilleux/ASTR310/fall06/statis.pdf}>" [žiūr. 2018-05-15]}
+  howpublished    = {University of Maryland, Department of Astronomy. Fall 2006, ASTR310. <\url{http://www.astro.umd.edu/~veilleux/ASTR310/fall06/statis.pdf}>" [žiūr.\ 2018-05-15]}
 }
 
 @misc{PoisStat,
   title  = {{Poisson Statistics}},
-  howpublished = {MIT Department of Physics, Junior Lab 8.13, Id: 003.poisson.tex,v 1.41, 2013. <\url{http://web.mit.edu/8.13/www/JLExperiments/JLExp003.pdf}> [žiūr. 2018-05-15]}
+  howpublished = {MIT Department of Physics, Junior Lab 8.13, Id: 003.poisson.tex,v 1.41, 2013. <\url{http://web.mit.edu/8.13/www/JLExperiments/JLExp003.pdf}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{pythia81,
@@ -32,12 +32,12 @@
 
 @misc{cmsswtwiki,
   title   = {{CMSSW Application Framework}},
-  howpublished    = {CMS TWiki, <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSSWFramework}> [žiūr. 2018-05-15]}
+  howpublished    = {CMS TWiki, <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookCMSSWFramework}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{cmsswev,
   title   = {{Event Generation and Simulation}},
-  howpublished    = {CMS TWiki <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookChapter6}> [žiūr. 2018-05-15]}
+  howpublished    = {CMS TWiki <\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/WorkBookChapter6}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{pflowpdf,
@@ -65,13 +65,13 @@
 @misc{pseudorapidity,
   author  = {Ed Daw},
   title   = {{Lecture 7 -- Rapidity and pseudorapidity}},
-  howpublished = {<\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf}> [žiūr. 2018-05-14]}
+  howpublished = {<\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf}> [žiūr.\ 2018-05-14]}
 }
 
 @misc{cmseta,
   author  = {Marcus Friedl},
   title   = {{CMS Detector Layout}},
-  howpublished    = {<\url{http://www.hephy.at/user/friedl/diss/html/node8.html}> [žiūr. 2018-05-10]}
+  howpublished    = {<\url{http://www.hephy.at/user/friedl/diss/html/node8.html}> [žiūr.\ 2018-05-10]}
 }
 
 @misc{DY13TeV,
@@ -84,12 +84,12 @@
 @misc{CMSslice,
   author = {David Barney},
   title = {{CMS slice (July 2010 version)}},
-  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr. 2018-05-15]}
+  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{LHCexperiments,
   title = {{LHC experiments}},
-  howpublished = {<\url{https://home.cern/about/experiments}> [žiūr. 2018-05-15]}
+  howpublished = {<\url{https://home.cern/about/experiments}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{aboutCMS,
@@ -99,32 +99,32 @@
 
 @misc{CMSdetector,
   title = {{Detector}},
-  howpublished = {<\url{https://cms.cern/detector}> [žiūr. 2018-12-21]}
+  howpublished = {<\url{https://cms.cern/detector}> [žiūr.\ 2018-12-21]}
 }
 
 @misc{accelerators,
   title = {{Accelerators}},
-  howpublished = {<\url{https://home.cern/science/accelerators}> [žiūr. 2018-12-21]}
+  howpublished = {<\url{https://home.cern/science/accelerators}> [žiūr.\ 2018-12-21]}
 }
 
 @misc{Ecal,
   title = {{Energy of Electrons and Photons (ECAL)}},
-  howpublished = {<\url{http://cms.cern/detector/measuring-energy/energy-electrons-and-photons-ecal}> [žiūr. 2018-12-21]}
+  howpublished = {<\url{http://cms.cern/detector/measuring-energy/energy-electrons-and-photons-ecal}> [žiūr.\ 2018-12-21]}
 }
 
 @misc{Hcal,
   title = {{Energy of Hadrons (HCAL)}},
-  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr. 2018-05-15]}
+  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr.\ 2018-05-15]}
 }
 
 @misc{Solenoid,
   title = {{Bending Particles}},
-  howpublished = {<\url{http://cms.cern/detector/bending-particles}> [žiūr. 2018-12-21]}
+  howpublished = {<\url{http://cms.cern/detector/bending-particles}> [žiūr.\ 2018-12-21]}
 }
 
 @misc{MuonChambers,
   title = {{Detecting muons}},
-  howpublished = {<\url{http://cms.cern/detector/detecting-muons}> [žiūr. 2018-12-21]}
+  howpublished = {<\url{http://cms.cern/detector/detecting-muons}> [žiūr.\ 2018-12-21]}
 }
 
 @unpublished{ANote,
@@ -193,9 +193,14 @@
   howpublished = {Nuclear Instruments and Methods in Physics Research A 506 250–303, DOI: 10.1016/S0168-9002(03)01368-8}
 }
 
+@misc{amcatnlo,
+  title   = {{MadGraph5\_aMC@NLO}},
+  howpublished = {<\url{https://launchpad.net/mg5amcnlo}> [žiūr.\ 2019-01-09]}
+}
+
 @misc{ROOT,
   title   = {{ROOT a Data Analysis Framework}},
-  howpublished = {<\url{https://root.cern.ch/}> [žiūr. 2018-05-10]}
+  howpublished = {<\url{https://root.cern.ch/}> [žiūr.\ 2018-01-09]}
 }
 
 @misc{AN2013,
